src/sass/_buttons.scss
.btn {
    border:0;
    padding:$button-padding;
    text-align: center;
    text-transform: uppercase;
    outline: 0 none;
    line-height: 18px;

    border-radius:2px;

    background-color: $button-default-color;
    color:$button-default-text-color;

    cursor:pointer;
    display: inline-block;
    @include transition-shadow($button-hover-transition-time);

    @include shadow(1);
    &:hover {
        @include shadow(2);
    }
    i {
        &.material-icons,&.fa {
            font-size:1.2rem;
            padding:0 .5rem;
        }
        &.right,&left {

        }
    }

    &.btn-large {
        font-size: 1.2rem;
        // height: 45px;
        line-height: 45px;
    }
    &.btn-block {
        display:block;
        width: 100%;
        @include border-box;
    }
    &.btn-link {
        background-color: transparent;
        color:$link-color;
        // @include shadow(0);
        box-shadow: none;
        &:hover {
            box-shadow: none;
            // @include shadow(0);
        }
    }
}

.btn-group {
    @include clearfix;
    .btn {
        float:left;
        margin-right: 1px;
        padding:$button-padding;
        @include shadow(0);
        border-radius:0;
        &:first-child {
            border-radius:2px 0 0 2px;
        }
        &:last-child {
            border-radius: 0 2px 2px 0;
        }
    }
}
// TODO on mobile, margin separator should be 0
.btn-toolbar {
    @include clearfix;
    .btn-group {
        float:left;
        margin-right: 10px;
    }
}

